<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TeacherActivity">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/common_full_open_on_phone"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_brightness_seekbar"
        android:title="@string/change_brightness"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_paint"
        android:title="@string/sketch_a_draw"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>