<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.cit.albertjimenez.elementaldroid.Welcome">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            style="@style/AppTheme.PopupOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@android:style/Theme.Black.NoTitleBar" />
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:elevation="8dp"
                android:fontFamily="@font/lobster"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textStyle="bold"


                android:shadowColor="#90FF00B4"
                android:shadowDx="6"
                android:shadowDy="6"
                android:shadowRadius="5"
                android:textColor="@color/dashboard_color"
                android:textSize="44sp"
                android:layout_height="0dp" />


        <ToggleButton
            android:id="@+id/animationsToggle"
            style="@android:style/Widget.Holo.Light.Button.Toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animations"
            android:textOff="@string/no_animations"
            android:textOn="@string/animations" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="221dp"
            android:layout_height="172dp"
            app:srcCompat="@drawable/welcome"
            android:contentDescription="@string/conten_image_description" />
        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="100dp">

        </com.google.android.gms.common.SignInButton>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
